<resources>
    <string name="app_name">Teknisi Indotek</string>
    <string name="judul">CV. Indotek Sinar Makmur</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="registrasi">REGISTRASI</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="proses">Proses</string>
    <string name="orderan">Orderan</string>
    <string name="keterangan_pemilik">Keterangan Pemilik</string>
    <string name="no_seri">No. Seri</string>
    <string name="merek_mesin">Merek Mesin</string>
    <string name="jenis_mesin">Jenis Mesin</string>
    <string name="contoh_gulung_dinamo">Contoh: Gulung dinamo...</string>
    <string name="diagnosa">Diagnosa</string>
    <string name="biaya">Biaya</string>


    <string name="judul_home">Request Upload Foto mesin</string>
    <string name="jwttoken">jwttoken</string>
    <string name="namauser">namauser</string>
    <string name="iduser">iduser</string>
    <string name="namasp">com.imaa.jwttoken</string>
    <string name="linkapi">linkapi</string>
    <string name="link_api">Link API</string>
    <string name="save_link_api">SAVE LINK API</string>
    <string name="hint_linkapi">https://0fdf-114-124-213-95.ngrok.io/</string>
    <string name="alamat">Alamat</string>
    <string name="nama">Nama</string>
    <string name="_1_hari">1 hari</string>
    <string name="_2_hari">2 hari</string>
    <string name="_3_hari">3 hari</string>
    <string name="nama_teknisi">Nama Teknisi</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="password_lama">Password Lama</string>

</resources>