<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">
    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_indotek"/>

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/labelusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="14dp"
        app:layout_constraintLeft_toLeftOf="@id/cvusername"
        app:layout_constraintBottom_toTopOf="@id/cvusername"
        android:layout_marginBottom="12dp"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvusername"
        app:layout_constraintTop_toBottomOf="@id/judul"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="22dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardElevation="10dp">
        <EditText
            android:padding="5dp"
            android:id="@+id/username"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/labelpasswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="14dp"
        app:layout_constraintLeft_toLeftOf="@id/cvpasswd"
        app:layout_constraintBottom_toTopOf="@id/cvpasswd"
        android:layout_marginBottom="12dp"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvpasswd"
        app:layout_constraintTop_toBottomOf="@id/cvusername"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="22dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardElevation="10dp">
        <EditText
            android:padding="5dp"
            android:id="@+id/password"
            android:background="@color/white"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/btnlogin"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/cvpasswd"
        android:layout_marginHorizontal="22dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login"
        android:background="#DD0011"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"/>


    <View
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/tombolrahasia"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <include layout="@layout/overlay_linkapi" android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>