<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/submitlinkapi"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:elevation="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B0000000">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvjudul"
                    android:layout_marginTop="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_api"
                    android:textSize="16dp"
                    app:layout_constraintLeft_toLeftOf="@id/cvpasswd"
                    app:layout_constraintBottom_toTopOf="@id/cvpasswd"
                    android:layout_marginBottom="12dp"/>
                <LinearLayout
                    android:clipToPadding="false"
                    android:paddingVertical="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="12dp"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="40dp"
                        app:cardElevation="10dp">

                        <EditText
                            android:padding="5dp"
                            android:id="@+id/linkapi"
                            android:background="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/hint_linkapi"
                            android:textColorHint="#34000000"/>



                    </androidx.cardview.widget.CardView>
                    <ImageView
                        android:id="@+id/btnPaste"
                        android:layout_marginRight="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_content_paste_24"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/savelinkapi"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="12dp"
                    app:layout_constraintTop_toBottomOf="@id/cvpasswd"
                    android:layout_marginHorizontal="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/save_link_api"
                    android:background="#DD0011"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>